@@ -1,3 +1,8 @@
+2003-08-20  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* nnimap.el (nnimap-open-connection): Allow different user names
+	on the same server (and in the same authinfo file).
+
 2003-08-20  Jesper Harder  <harder@ifa.au.dk>
 
 	* gnus-sieve.el (gnus-sieve-crosspost): Fix type.
